@@ -1,3 +1,7 @@
+2008-03-08  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug #7511: IRRE - Issues with expand/collapse of child records
+
 2008-03-03  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Release of TYPO3 4.1.6
